--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/icons/header/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Movies App</title>
+    <title>MovieBox</title>
   </head>
   <body>
     <div id="root"></div>
